### Changed - 細目管理調整

--- a/views/layouts/side.ejs
+++ b/views/layouts/side.ejs
@@ -174,7 +174,7 @@
         <% if (process.env.USE_ACCOUNT_TITLE === '1') { %>
         <li class="nav-item">
             <a class="nav-link" data-toggle="collapse" href="#accountTitles">
-                <i class="material-icons">category</i>
+                <i class="material-icons">account_balance</i>
                 <p>勘定科目
                     <b class="caret"></b>
                 </p>
@@ -183,19 +183,19 @@
                 <ul class="nav">
                     <li class="nav-item">
                         <a class="nav-link" href="/accountTitles/accountTitleCategory">
-                            <span class="sidebar-mini"><i class="material-icons">category</i></span>
+                            <span class="sidebar-mini"><i class="material-icons">account_balance</i></span>
                             <span class="sidebar-normal">科目分類</span>
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/accountTitles/accountTitleSet">
-                            <span class="sidebar-mini"><i class="material-icons">category</i></span>
+                            <span class="sidebar-mini"><i class="material-icons">account_balance</i></span>
                             <span class="sidebar-normal">科目</span>
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/accountTitles">
-                            <span class="sidebar-mini"><i class="material-icons">category</i></span>
+                            <span class="sidebar-mini"><i class="material-icons">account_balance</i></span>
                             <span class="sidebar-normal">細目</span>
                         </a>
                     </li>
