--- a/views/accountTitles/form.ejs
+++ b/views/accountTitles/form.ejs
@@ -6,8 +6,8 @@
     </div>
 
     <div class="card-body">
-        <div class="form-group">
-            <label for="inCodeSet[codeValue]" class="">
+        <div class="form-group bmd-form-group">
+            <label for="inCodeSet[codeValue]" class="bmd-label-static">
                 科目<span class="text-danger">＊</span>
             </label>
             <% if (!isNew) { %>
@@ -33,31 +33,31 @@
             </p>
         </div>
 
-        <div class="form-group">
-            <label for="codeValue" class="">
-                細目コード<span class="text-danger">＊</span>
+        <div class="form-group bmd-form-group">
+            <label for="codeValue" class="bmd-label-static">
+                コード<span class="text-danger">＊</span>
             </label>
             <input class="form-control" name="codeValue" id="codeValue" placeholder="" maxlength=64
                 value="<%= forms.codeValue %>" <% if (!isNew) { %> readonly <% } %>>
-            <p class="message">半角64文字以内でご入力ください。</p>
+            <span class="bmd-help">半角64文字以内でご入力ください</span>
+            <% if (errors && errors['codeValue']) { %>
             <p class="error message text-danger">
-                <% if (errors && errors['codeValue']) { %>
                 <%- errors['codeValue'].msg %>
-                <% } %>
             </p>
+            <% } %>
         </div>
 
-        <div class="form-group">
-            <label for="name" class="">
-                細目名称<span class="text-danger">＊</span>
+        <div class="form-group bmd-form-group">
+            <label for="name" class="bmd-label-static">
+                名称<span class="text-danger">＊</span>
             </label>
             <input class="form-control" name="name" id="name" placeholder="" maxlength=64 value="<%= forms.name %>">
-            <p class="message">64文字以内でご入力ください。</p>
+            <span class="bmd-help">64文字以内でご入力ください</span>
+            <% if (errors && errors['name']) { %>
             <p class="error message text-danger">
-                <% if (errors && errors['name']) { %>
                 <%- errors['name'].msg %>
-                <% } %>
             </p>
+            <% } %>
         </div>
     </div>
 </div>
