### Changed - 追加特性の表示UI調整

--- a/views/accountTitles/index.ejs
+++ b/views/accountTitles/index.ejs
@@ -126,7 +126,7 @@ AT-01
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h4 class="modal-title">追加特性</h4>
+                    <h4 class="modal-title"></h4>
                 </div>
                 <div class="modal-body">
                 </div>
