--- a/views/events/screeningEventSeries/index.ejs
+++ b/views/events/screeningEventSeries/index.ejs
@@ -163,7 +163,7 @@ Aa-3
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h4 class="modal-title">追加特性</h4>
+                    <h4 class="modal-title"></h4>
                 </div>
                 <div class="modal-body">
                 </div>
