--- a/views/places/movieTheater/index.ejs
+++ b/views/places/movieTheater/index.ejs
@@ -107,7 +107,7 @@ Aa-12
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h4 class="modal-title">劇場の追加特性</h4>
+                    <h4 class="modal-title"></h4>
                 </div>
                 <div class="modal-body">
                 </div>
