--- a/views/layouts/side.ejs
+++ b/views/layouts/side.ejs
@@ -88,12 +88,6 @@
                             <span class="sidebar-normal">券種</span>
                         </a>
                     </li>
-                    <li class="nav-item <%= (displayId === 'Aa-8') ? 'active': ''; %>">
-                        <a class="nav-link" href="/ticketTypeGroups">
-                            <span class="sidebar-mini"><i class="material-icons">local_offer</i></span>
-                            <span class="sidebar-normal">券種グループ</span>
-                        </a>
-                    </li>
                     <% if (process.env.USE_OFFER_ADD_ON === '1') { %>
                     <li class="nav-item <%= (displayId === 'OF-01') ? 'active': ''; %>">
                         <a class="nav-link" href="/offers">
@@ -101,13 +95,13 @@
                             <span class="sidebar-normal">オファー <span class="badge badge-secondary">Preview</span></span>
                         </a>
                     </li>
+                    <% } %>
                     <li class="nav-item <%= (displayId === 'OC-01') ? 'active': ''; %>">
                         <a class="nav-link" href="/offerCatalogs">
                             <span class="sidebar-mini"><i class="material-icons">local_offer</i></span>
-                            <span class="sidebar-normal">カタログ <span class="badge badge-secondary">Preview</span></span>
+                            <span class="sidebar-normal">カタログ(券種グループ)</span>
                         </a>
                     </li>
-                    <% } %>
                 </ul>
             </div>
         </li>
