--- a/views/offers/form.ejs
+++ b/views/offers/form.ejs
@@ -182,7 +182,7 @@
         <div class="form-row">
             <div class="form-group bmd-form-group col-md-6">
                 <label for="alternateName[ja]" class="bmd-label-static">
-                    代替名称<span class="text-danger">＊</span>
+                    代替名称(管理名称)<span class="text-danger">＊</span>
                 </label>
                 <input type="text" class="form-control" name="alternateName[ja]" id="alternateName[ja]" placeholder=""
                     maxlength=64
