--- a/views/ticketType/index.ejs
+++ b/views/ticketType/index.ejs
@@ -115,6 +115,7 @@ Aa-6
                                     <th>カテゴリー</th>
                                     <th>名称</th>
                                     <th>発生金額</th>
+                                    <th>売上金額</th>
                                     <th>適用条件</th>
                                     <th>有効性</th>
                                     <th>アドオン</th>
@@ -141,6 +142,9 @@ Aa-6
                                         name="priceSpecification.price__priceSpecification.priceCurrency__priceSpecification.referenceQuantity.value">
                                         $priceSpecification.price$ $priceSpecification.priceCurrency$ /
                                         $priceSpecification.referenceQuantity.value$
+                                    </td>
+                                    <td name="priceSpecification.accounting.accountsReceivable">
+                                        $priceSpecification.accounting.accountsReceivable$
                                     </td>
                                     <td name="eligibleConditions">$eligibleConditions$</td>
                                     <td
