--- a/views/events/screeningEvent/index.ejs
+++ b/views/events/screeningEvent/index.ejs
@@ -116,7 +116,12 @@ Aa-4
                             </thead>
                             <tbody>
                                 <tr id="templateRow" eventId="$id$">
-                                    <td name="id">$id$</td>
+                                    <td name="id__id">
+                                        <a href="javascript:void(0)" class="editPerformance" data-id="$id$">
+                                            $id$
+                                            <i class="material-icons" style="font-size: 1.2em;">edit</i>
+                                        </a>
+                                    </td>
                                     <td name="location.name.ja|slice">
                                         $location.name.ja$
                                     </td>
