--- a/views/creativeWorks/movie/form.ejs
+++ b/views/creativeWorks/movie/form.ejs
@@ -94,6 +94,27 @@
                     <% } %>
                 </span>
             </div>
+
+            <div class="form-group bmd-form-group col-md-3">
+                <label for="distributor[codeValue]" class="bmd-label-static">
+                    配給
+                </label>
+                <select name="distributor[codeValue]" id="distributor[codeValue]" class="form-control">
+                    <option value="">---</option>
+                    <% for (let distributorType of distributorTypes) { %>
+                    <option value="<%= distributorType.codeValue %>"
+                        <% if (forms.distributor !== undefined && forms.distributor !== null && forms.distributor.codeValue === distributorType.codeValue) { %>
+                        selected="selected" <% } %>>
+                        <%- distributorType.name.ja %>
+                    </option>
+                    <% } %>
+                </select>
+                <span class="bmd-help text-danger d-block">
+                    <% if (errors && errors.contentRating) { %>
+                    <%- errors.contentRating.msg %>
+                    <% } %>
+                </span>
+            </div>
         </div>
 
         <div class="form-row">
