--- a/views/creativeWorks/movie/index.ejs
+++ b/views/creativeWorks/movie/index.ejs
@@ -98,6 +98,7 @@ Aa-10
                                     <th>サブタイトル</th>
                                     <th>上映時間</th>
                                     <th>レイティング</th>
+                                    <th>配給</th>
                                     <th>公開</th>
                                     <th>興行終了</th>
                                     <th>追加特性</th>
@@ -116,6 +117,7 @@ Aa-10
                                     <td name="headline|slice:10">$headline$</td>
                                     <td name="duration|duration:minute">$duration$</td>
                                     <td name="contentRating">$contentRating$</td>
+                                    <td name="distributor.codeValue">$distributor.codeValue$</td>
                                     <td name="datePublished|date:YYYY-MM-DD">$datePublished$</td>
                                     <td name="offers.availabilityEnds|date:YY-MM-DD HH:mm:ss">$offers.availabilityEnds$
                                     </td>
