--- a/views/creativeWorks/movie/index.ejs
+++ b/views/creativeWorks/movie/index.ejs
@@ -117,7 +117,7 @@ Aa-10
                                     <td name="headline|slice:10">$headline$</td>
                                     <td name="duration|duration:minute">$duration$</td>
                                     <td name="contentRating">$contentRating$</td>
-                                    <td name="distributor.codeValue">$distributor.codeValue$</td>
+                                    <td name="distributorName">$distributorName$</td>
                                     <td name="datePublished|date:YYYY-MM-DD">$datePublished$</td>
                                     <td name="offers.availabilityEnds|date:YY-MM-DD HH:mm:ss">$offers.availabilityEnds$
                                     </td>
