--- a/views/offerCatalogs/_dataTables.ejs
+++ b/views/offerCatalogs/_dataTables.ejs
@@ -73,8 +73,8 @@
                                 </a>
                             </td>
                             <td name="itemOffered.typeOf">$itemOffered.typeOf$</td>
-                            <td name="itemOffered.serviceType.codeValue">
-                                $itemOffered.serviceType.codeValue$</td>
+                            <td name="serviceTypeName">
+                                $serviceTypeName$</td>
                             <td name="id__additionalProperty">
                                 <a href="javascript:void(0)" class=" showAdditionalProperty" data-id="$id$">
                                     <span>表示</span>
