--- a/views/offerCatalogs/_dataTables.ejs
+++ b/views/offerCatalogs/_dataTables.ejs
@@ -31,11 +31,9 @@
                                 <option value="EventService">イベント</option>
                                 <% } else { %>
                                 <option value="">---</option>
-                                <option value="EventService">イベント</option>
-                                <% if (process.env.USE_OFFER_ADD_ON === '1') { %>
-                                <option value="Product">アドオン</option>
-                                <option value="MembershipService">会員サービス</option>
-                                <% } %>
+                                <% productTypes.forEach((productType) => { %>
+                                <option value="<%= productType.codeValue %>"><%= productType.name %></option>
+                                <% }) %>
                                 <% } %>
                             </select>
                         </div>
@@ -72,7 +70,7 @@
                                     $offerCount$
                                 </a>
                             </td>
-                            <td name="itemOffered.typeOf">$itemOffered.typeOf$</td>
+                            <td name="itemOfferedName">$itemOfferedName$</td>
                             <td name="serviceTypeName">
                                 $serviceTypeName$</td>
                             <td name="id__additionalProperty">
