--- a/views/offers/index.ejs
+++ b/views/offers/index.ejs
@@ -126,6 +126,7 @@ OF-01
                                     <th>発生金額</th>
                                     <th>売上金額</th>
                                     <th>有効性</th>
+                                    <th>アドオン</th>
                                     <th>カタログ</th>
                                     <th>追加特性</th>
                                 </tr>
@@ -158,6 +159,11 @@ OF-01
                                         $validFrom$ ~ $validThrough$<br>
                                         $validRateLimitStr$
                                     </td>
+                                    </td>
+                                    <td name="id__addOnCount">
+                                        <a href="javascript:void(0)" class="showAddOn" data-id="$id$">
+                                            <span>$addOnCount$</span>
+                                        </a>
                                     </td>
                                     <td name="id__showCatalogs">
                                         <a href="javascript:void(0)" class="showCatalogs" data-id="$id$">
