--- a/views/ticketType/index.ejs
+++ b/views/ticketType/index.ejs
@@ -112,15 +112,15 @@ Aa-6
                                 <tr>
                                     <th>コード</th>
                                     <th>利用状況</th>
+                                    <th>アイテム</th>
                                     <th>カテゴリー</th>
                                     <th>名称</th>
                                     <th>発生金額</th>
                                     <th>売上金額</th>
-                                    <th>適用条件</th>
                                     <th>有効性</th>
                                     <th>アドオン</th>
+                                    <th>カタログ</th>
                                     <th>追加特性</th>
-                                    <th>関連グループ</th>
                                     <th></th>
                                 </tr>
                             </thead>
@@ -136,17 +136,18 @@ Aa-6
                                     <td name="availability">
                                         <span class="text-muted">$availability$</span>
                                     </td>
+                                    <td name="itemOfferedName">$itemOfferedName$</td>
                                     <td name="categoryName">$categoryName$</td>
                                     <td name="name.ja|slice">$name.ja$</td>
                                     <td
-                                        name="priceSpecification.price__priceSpecification.priceCurrency__priceSpecification.referenceQuantity.value">
+                                        name="priceSpecification.price__priceSpecification.priceCurrency__priceSpecification.referenceQuantity.value__priceSpecification.referenceQuantity.unitCode">
                                         $priceSpecification.price$ $priceSpecification.priceCurrency$ /
                                         $priceSpecification.referenceQuantity.value$
+                                        $priceSpecification.referenceQuantity.unitCode$
                                     </td>
                                     <td name="priceSpecification.accounting.accountsReceivable">
                                         $priceSpecification.accounting.accountsReceivable$
                                     </td>
-                                    <td name="eligibleConditions">$eligibleConditions$</td>
                                     <td
                                         name="validFrom|date:YY-MM-DD HH:mm:ss__validThrough|date:YY-MM-DD HH:mm:ss__validRateLimitStr">
                                         $validFrom$ ~ $validThrough$<br>
@@ -155,15 +156,16 @@ Aa-6
                                     <td name="id__addOnCount">
                                         <a href="javascript:void(0)" class="showAddOn" data-id="$id$">
                                             <span>$addOnCount$</span>
-                                        </a></td>
-                                    <td name="id__additionalProperty">
-                                        <a href="javascript:void(0)" class="showAdditionalProperty" data-id="$id$">
-                                            <span>表示</span>
                                         </a>
                                     </td>
                                     <td name="id__ticketTypeGroups">
                                         <a href="javascript:void(0)" data-id="$id$" class="popupListTicketTypeGroup">
                                             表示
+                                        </a>
+                                    </td>
+                                    <td name="id__additionalProperty">
+                                        <a href="javascript:void(0)" class="showAdditionalProperty" data-id="$id$">
+                                            <span>表示</span>
                                         </a>
                                     </td>
                                     <td name="id">
